# Chess_bot_v2

./: .gitmodules  BestMove.hh  CMakeLists.txt  ChessGameDemo.cc  ChessGameDemo.hh  Evaluator.cc  Evaluator.hh  Move.cc  Move.hh  OpeningBook.cc  OpeningBook.hh  Piece.cc  Piece.hh  README.md  UCIHandler.cc  UCIHandler.hh  Zobrist.cc  Zobrist.hh  board.cc  board.hh  engine.cc  engine.hh  main.cc
.github/workflows/: ci.yml
tests/: Benchmarks.cc  Game.cc  MinmaxBenchmark.cc  tests.cpp
